--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <video muted autoplay loop controls>
-        <source src="../web/완성2.mp4" type="video/mp4">
+        <source src="./완성2.mp4" type="video/mp4">
       
       </video>
     
